--- a/src/main/resources/templates/authLogin/login.html
+++ b/src/main/resources/templates/authLogin/login.html
@@ -32,10 +32,15 @@
     </div>
 
     <form th:action="@{/login}" method="post">
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+        <div class="mb-3">
+            <input type="text" name="username" class="form-control" placeholder="Username" required>
+        </div>
+        <div class="mb-3">
+            <input type="password" name="password" class="form-control" placeholder="Password" required>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
+
 
 </div>
 
